--- a/css/style.css
+++ b/css/style.css
@@ -2461,5 +2461,31 @@ h4 {
     opacity: 1;
 }
 
+/* .button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button1 {
+    background-color: transparent; 
+    color: white; 
+    border: 2px solid white;
+    border-radius: 12px;
+  }
+  
+  .button1:hover {
+    background-color: white;
+    color: black; */
+  
+
 
 /* End Nav Styles */
